# practise_by_dev_coding

./: .gitignore  README.md
Frequently_Asked_Interview_Questions/: 279_wan_quan_ping_fang_zui_shao.cpp  Reverse_LinkList.cpp  bigNumMul.cpp  bigNumSub.cpp  bigStringNumAdd.cpp  quick_sort.cpp
IO_linux/: README.md
IO_linux/epoll/: CMakeLists.txt  README.md  build.sh  client.c  server.c
IO_linux/poll/: CMakeLists.txt  README.md  build.sh  client.c  server.c
IO_linux/select/: CMakeLists.txt  README.md  build.sh  client.c  server.c
buffer/: README.md  buffer.cpp  buffer.h
c_base_things/: register_callback.cpp
learn_basic/singleton_pattern/: README.md  safe_singleton.h  safe_singletonMain.cpp  singleton.h  singleton_test
lib-file/: README.md
lib-file/dynamic_lib/: CMakeLists.txt  build.sh  calculator.cpp  calculator.h  geometry.cpp  geometry.h  main.cpp
lib-file/static_lib/: CMakeLists.txt  build.sh  main.cpp  math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h
log_framework/: CMakeLists.txt  README.md  blockqueue.h  build.sh  log.cpp  log.h  performance_test.cpp  simple_example.cpp
memory_pool/: CMakeLists.txt  README.md  build.sh  memory_pool.h  memory_pool.inl  simple_example.cpp  stress_test.cpp
mutil_thread/: README.md  join_detach.cpp  test_mutex_and_lock_unique_guard.cpp  to_create_thread.cpp
pools/memory_pool/: README.md
pools/thread_pool/: CMakeLists.txt  README.md
pools/thread_pool/include/: noncopyable.h  task.h  task_queue.h  thread_pool.h
pools/thread_pool/src/: thread_pool.cpp
pools/thread_pool/test/: test_thread_pool.cpp
process_communication/: README.md
process_communication/message_queue/: README.md  read.c  write.c
process_communication/named_pipe/: README.md  p1.cpp  p2.cpp
process_communication/semaphore/: README.md  read.cpp  write.cpp
process_communication/share_memory/: README.md  read.c  write.c
process_communication/signal/: README.md  read.cpp  send.cpp
process_communication/socket/: README.md  client.c  server.c
process_communication/uname_pipe/: README.md  brothers_uname_pipe_comm.c  create_unamed_pipe.cpp  father_son_process_uname_pipe_communication.c
singleton_pattern/: recommended.singleton.h  run_safe_singleton.sh  run_singleton.sh  safe_singleton_test  singletonMain.cpp
smart_pointer/: README.md
smart_pointer/unique_ptr/: CMakeLists.txt  README.md  build.sh  main.cpp  unique_ptr.h
smart_pointer/w_s_ptr/: CMakeLists.txt  README.md  build.sh  control_block.h  main.cpp  shared_ptr.h  weak_ptr.h
socket/: readme.md
socket/udp/: server.cc
sort_algorithm/: README.md  bubble_sort.cpp  insert_sort.cpp  merge_sort.cpp  quick_sort.cpp  select_sort.cpp
testVimCodingCPP/: .bigNumAdd.cpp.swp  .plugin_code_cpp.cpp.swp  .swp  README.md  add  bigNumAdd.cpp  code_by_vim_only  code_by_vim_only.cpp  pcc  plugin_code_cpp.cpp
thread_pool/: CMakeLists.txt  README.md  advanced_test.cpp  build.sh  simple_example.cpp  thread_pool.cpp  thread_pool.h
